--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,13 @@
 # Core library
-add_library(hotplug STATIC
+add_library(hotplugpp STATIC
     PluginLoader.cpp
 )
 
-target_include_directories(hotplug PUBLIC
+target_include_directories(hotplugpp PUBLIC
     ${CMAKE_SOURCE_DIR}/include
 )
 
 # Link platform-specific libraries
 if(UNIX AND NOT APPLE)
-    target_link_libraries(hotplug PUBLIC dl)
+    target_link_libraries(hotplugpp PUBLIC dl)
 endif()
